--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,1 +1,10 @@
-p= link_to 'Ask question', new_question_path
+h1 Questions
+ul
+  - @questions.each do |q|
+    li
+      h2
+        = link_to q.title, q
+      p
+        = q.body
+p
+  = link_to 'Ask question', new_question_path
