fix acceptance tests

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -14,7 +14,7 @@ h2 Answers
 
 - if @question.answers.present?
   ul.answers-list
-    = render partial: 'answers/answer', collection: @question.answers
+    = render @question.answers
 - else
   p No answers yet
 
