--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,8 +1,34 @@
 - if answer.persisted?
-  li.answer-list__item
-    span.answer__attrs> Author: <strong>#{answer.author.email}</strong>
-    - if current_user&.author_of?(answer)
-      = link_to 'Delete answer', answer_path(answer),
-              method: :delete,
-              data: {confirm: 'Are you sure?'}
-    p = answer.body
+  = content_tag :li, class: "card answer-list__item #{'best-answer' if answer.best}", data: { 'answer-id': answer.id }
+    .card-body
+      h5.card-title = answer.body
+      - if current_user&.author_of?(@question)
+        = button_to 'Select as best answer', best_answer_path(answer),
+                { class: "btn btn-outline-primary float-right btn-best-answer",
+                        method: :patch,
+                        type: "button",
+                        remote: true,
+                        'aria-pressed': "false",
+                        params: { question: @question }}
+
+      h6.card-subtitle.mb-2.text-muted.answer__attrs>
+        'Author: <strong>#{answer.author.email}</strong> at #{answer.updated_at}
+
+      - if current_user&.author_of?(answer)
+        'Actions:
+        = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+        = link_to 'Delete', answer_path(answer),
+                method: :delete,
+                data: {confirm: 'Are you sure?'},
+                remote: true
+        = form_with model: answer, class: 'hide', html: { id: "edit-answer-#{answer.id}"} do |f|
+          .edit-answer-errors
+            = render 'shared/errors', resource: @answer
+          .form-group.row
+            = f.label :body, class: 'col-sm-2 col-form-label'
+              'Your answer
+            .col-sm-10
+              = f.text_area :body, class: 'form-control'
+          .form-group.row
+            .col
+              = f.submit class: 'btn btn-primary float-right'
