--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,8 +9,9 @@ html
     = javascript_include_tag "application", "data-turbolinks-track": "reload"
 
 
-  body
+  body.d-flex.flex-column
     = render 'layouts/navbar'
-    p class="notice" #{notice}
-    p class="alert" #{alert}
-    = yield
+    .container.flex-fill
+      #flash
+        = render 'shared/flash'
+      = yield
