--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,9 +1,12 @@
-nav
-  div
-    - if user_signed_in?
-      strong> #{current_user.email} |
-      = link_to t('.logout'), destroy_user_session_path, method: :delete
-    - else
-      => link_to t('.login'), user_session_path
-      |
-      = link_to t('.signup'), new_user_registration_path
+nav.navbar.navbar-dark.bg-dark.mb-3
+  = link_to 'QNA', root_path, class: 'navbar-brand logo__title'
+  .navbar-text
+    -if user_signed_in?
+      'Welcome,
+      strong> =current_user.email
+      ' |
+      = link_to 'Logout', destroy_user_session_path, method: :delete
+    -else
+      => link_to 'Login', user_session_path
+      ' |
+      = link_to 'Signup', new_user_registration_path
