--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,10 +1,4 @@
-= render 'shared/errors', resource: @question
-
-= form_with model: @question, local: true do |f|
-  = f.label :title
-  = f.text_field :title
-
-  = f.label :body
-  = f.text_area :body
-
-  = f.submit 'Create question'
+#question-errors
+  = render 'shared/errors', resource: @question
+#question-form
+  = render 'form'
