--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,4 +1,4 @@
-$('#answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
+$('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 $('#flash').html('<%= render 'shared/flash' %>');
 
 <% if @answer.persisted? %>
