--- a/app/views/questions/_block_of_question.html.slim
+++ b/app/views/questions/_block_of_question.html.slim
@@ -2,8 +2,9 @@ h1.question__title = @question.title
 p.question__body = @question.body
 - if @question.files.attached?
   p
-  - @question.files.each do |file|
-    span>= link_to file.filename.to_s, url_for(file)
+    'File:
+    - @question.files.each do |file|
+      span>= link_to file.filename.to_s, url_for(file)
 p.question_attrs.text-muted
   'Question author: <em>#{@question.author.email}</em>
   - if current_user&.author_of?(@question)
@@ -18,12 +19,19 @@ p.question_attrs.text-muted
        = render 'shared/errors', resource: @question
     .form-group.row
       = f.label :title, class: 'col-sm-2 col-form-label'
+        'Title
       .col-sm-10
         = f.text_field :title, class: 'form-control'
     .form-group.row
       = f.label :body, class: 'col-sm-2 col-form-label'
+        'Body
       .col-sm-10
         = f.text_area :body, class: 'form-control'
+    .form-group.row
+      = f.label :files, class: 'col-sm-2 col-form-label'
+        'File
+      .col-sm-10
+        = f.file_field :files, multiple: true, class: 'form-control-file'
     .form-group.row
       .col
         = f.submit class: 'btn btn-primary float-right'
