--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -11,6 +11,17 @@
                         'aria-pressed': "false",
                         params: { question: @question }}
 
+      - if answer.files.attached?
+        p.attached-files
+          'File:
+          - answer.files.each do |file|
+            span>
+              = link_to file.filename.to_s, url_for(file)
+              = link_to attachment_path(file),
+                      method: :delete,
+                      data: {confirm: 'Are you sure?'},
+                      remote: true
+      
       h6.card-subtitle.mb-2.text-muted.answer__attrs>
         'Author: <strong>#{answer.author.email}</strong> at #{answer.updated_at}
 
@@ -29,6 +40,11 @@
               'Your answer
             .col-sm-10
               = f.text_area :body, class: 'form-control'
+          .form-group.row
+            = f.label :files, class: 'col-sm-2 col-form-label'
+              'File
+            .col-sm-10
+              = f.file_field :files, multiple: true, class: 'form-control-file'
           .form-group.row
             .col
               = f.submit class: 'btn btn-primary float-right'
