--- a/app/views/questions/_block_of_question.html.slim
+++ b/app/views/questions/_block_of_question.html.slim
@@ -1,15 +1,15 @@
 h1.question__title = @question.title
 p.question__body = @question.body
 - if @question.files.attached?
-  p
+  p.attached-files
     'File:
     - @question.files.each do |file|
       span>
         = link_to file.filename.to_s, url_for(file)
-        = link_to delete_file_question_path(file),
+        = link_to attachment_path(file),
                 method: :delete,
-                data: {confirm: 'Are you sure?', 'file-id': file.id},
-                :remote => true
+                data: {confirm: 'Are you sure?'},
+                remote: true
 
 p.question_attrs.text-muted
   'Question author: <em>#{@question.author.email}</em>
