can add link when create question and answer

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,7 +10,12 @@
                         remote: true,
                         'aria-pressed': "false",
                         params: { question: @question }}
-
+      - if answer.links.present?
+        p.links
+          'Links:
+          - answer.links.each do |link|
+            span>
+              = link_to link.name, link.url
       - if answer.files.attached?
         p.attached-files
           'File:
