--- a/app/views/questions/_block_of_question.html.slim
+++ b/app/views/questions/_block_of_question.html.slim
@@ -1,7 +1,7 @@
 h1.question__title = @question.title
 p.question__body = @question.body
 - if @question.links.present?
-  p.links
+  p.links-list
     'Links:
     - @question.links.each do |link|
       span>
@@ -22,28 +22,9 @@ p.question_attrs.text-muted
   - if current_user&.author_of?(@question)
     ' Question actions:
     = link_to 'Edit', '#', class: 'edit-question-link'
-    = link_to 'delete', question_path(@question),
+    = link_to 'Delete', question_path(@question),
               method: :delete,
               data: {confirm: 'Are you sure?'}
 
-  = form_with model: @question, class: 'hide', html: {id: "edit-question-form"} do |f|
-    .question-errors
-       = render 'shared/errors', resource: @question
-    .form-group.row
-      = f.label :title, class: 'col-sm-2 col-form-label'
-        'Title
-      .col-sm-10
-        = f.text_field :title, class: 'form-control'
-    .form-group.row
-      = f.label :body, class: 'col-sm-2 col-form-label'
-        'Body
-      .col-sm-10
-        = f.text_area :body, class: 'form-control'
-    .form-group.row
-      = f.label :files, class: 'col-sm-2 col-form-label'
-        'File
-      .col-sm-10
-        = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control-file'
-    .form-group.row
-      .col
-        = f.submit class: 'btn btn-primary float-right'
+    = form_with model: @question, class: 'hide', html: {id: "edit-question-form"} do |f|
+      = render partial: 'form_fields', locals: { f: f }
