--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,2 +1,3 @@
 #question-form
-  = render 'form'
+  = form_with model: @question, local: true do |f|
+    = render partial: 'form_fields', locals: { f: f }
