--- a/app/views/answers/_form_fields.html.slim
+++ b/app/views/answers/_form_fields.html.slim
@@ -1,25 +1,24 @@
-.question-errors
-  = render 'shared/errors', resource: @question
-.form-group.row
-  = f.label :title, class: 'col-sm-2 col-form-label'
-    'Title
-  .col-sm-10
-    = f.text_field :title, class: 'form-control'
+.answer-errors
+  = render 'shared/errors', resource: @answer
+
 .form-group.row
   = f.label :body, class: 'col-sm-2 col-form-label'
-    'Body
+    'Your answer
   .col-sm-10
     = f.text_area :body, class: 'form-control'
+
 .form-group.row
   = f.label :files, class: 'col-sm-2 col-form-label'
     'File
   .col-sm-10
     = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control-file'
+
 .links
   = f.fields_for :links do |l|
     = render 'shared/link_fields', f: l
   .links-actions
     = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
+
 .form-group.row
   .col
     = f.submit class: 'btn btn-primary float-right'
