--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -3,5 +3,5 @@ $('#flash').html('<%= render 'shared/flash' %>');
 <% unless @answer.errors.present? %>
   $('.answer-list__item[data-answer-id=<%= @answer.id %>]').html('<%= j render @answer %>')
 <% else %>
-  $('.answer-list__item[data-answer-id=<%= @answer.id %>] .edit-answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
+  $('.answer-list__item[data-answer-id=<%= @answer.id %>] .answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 <% end %>
