--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -2,6 +2,7 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 $('#flash').html('<%= render 'shared/flash' %>');
 
 <% if @answer.persisted? %>
+  $("li:contains('No answers yet')").remove();
   $('.answers-list').append('<%= j render @answer %>');
   $('#answer-form #answer_body').val('');
 <% end %>
