--- a/app/views/questions/_block_of_question.html.slim
+++ b/app/views/questions/_block_of_question.html.slim
@@ -6,6 +6,11 @@ p.question__body = @question.body
     - @question.links.each do |link|
       span>
         = link_to link.name, link.url
+        - if link.gist_link?
+          br
+          - GistService.new(link).content.each do |filename, content|
+            em = filename
+            pre = content
 - if @question.files.attached?
   p.attached-files
     'File:
