add reward to question

--- a/app/views/questions/_block_of_question.html.slim
+++ b/app/views/questions/_block_of_question.html.slim
@@ -14,6 +14,13 @@ p.question__body = @question.body
                 data: {confirm: 'Are you sure?'},
                 remote: true
 
+- if @question.reward.present?
+  p.reward
+    'Reward:
+    span>
+      = @question.reward.name
+      = link_to @question.reward.image.filename.to_s, url_for(@question.reward.image)
+
 p.question_attrs.text-muted
   'Question author: <em>#{@question.author.email}</em>
   - if current_user&.author_of?(@question)
