reward for best answer author

--- a/app/views/questions/_block_of_question.html.slim
+++ b/app/views/questions/_block_of_question.html.slim
@@ -17,9 +17,10 @@ p.question__body = @question.body
 - if @question.reward.present?
   p.reward
     'Reward:
-    span>
+    div>
+      = image_tag(url_for(@question.reward.image), size: "100x100", alt: @question.reward.name)
+      br
       = @question.reward.name
-      = link_to @question.reward.image.filename.to_s, url_for(@question.reward.image)
 
 p.question_attrs.text-muted
   'Question author: <em>#{@question.author.email}</em>
