--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -3,7 +3,7 @@ nav.navbar.navbar-dark.bg-dark.mb-3
   .navbar-text
     -if user_signed_in?
       'Welcome,
-      strong> =current_user.email
+      strong> = link_to current_user.email, user_path(current_user)
       ' |
       = link_to 'Logout', destroy_user_session_path, method: :delete
     -else
