refactor answer view

--- a/app/assets/stylesheets/answer.scss
+++ b/app/assets/stylesheets/answer.scss
@@ -1,6 +1,8 @@
 .best-answer {
-  border: 2px solid #B00100;
-  background-color: gold;
+  background-color: lightyellow;
+}
+.best-answer-icon {
+  fill: orangered!important;
 }
 .actions a {
   fill: #007bff;
