--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     = action_cable_meta_tag
+    = Gon::Base.render_data
 
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track": "reload"
     = javascript_include_tag "application", "data-turbolinks-track": "reload"
@@ -12,7 +13,8 @@ html
 
   body.d-flex.flex-column
     = render 'layouts/navbar'
-    .container.flex-fill
-      #flash
-        = render 'shared/flash'
-      = yield
+    section.content
+      .container.flex-fill
+        #flash
+          = render 'shared/flash'
+        = yield
