--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
-#question data-question-id=@question.id
+#question.card data-question-id=@question.id
   =render 'block_of_question'
 hr
 h2 Answers
